tests/rosetta/out/Smalltalk/abelian-sandpile-model.out
/tmp/abelian-sandpile-model.st:7: parse error, expected ']'
